--- a/ipu/templates/notification/create_notification.html
+++ b/ipu/templates/notification/create_notification.html
@@ -5,8 +5,12 @@
 
     <form method = 'POST' id = "create_notification-form" action="{% url 'create_notification' %}">
         {% csrf_token %}
-        {% form form=create_notification %}{% endform %}                 
+        
+        {% form form=create_notification %}
+
+        {% endform %}
+        <br>
+        <hr/>
     	<button type = 'input' id = "notifyall" data-id="false" class="btn waves-effect waves-light-right">Notify All</button>
     </form>
-
 
