Add dummy company functionality
- Incomplete

--- a/ipu/templates/account/activation_failure.html
+++ b/ipu/templates/account/activation_failure.html
@@ -2,6 +2,6 @@
 {% block title %} Acitvation Failed {% endblock %}
 {% block content %} 
     <h4> Invalid Activation Link</h4>
-    <p> Either create a new account <a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'base' %}">login</a>
+    <p> Either create a new account <a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'auth' %}">login</a>
     </p> 
 {% endblock %}
