--- a/ipu/templates/account/activation_success.html
+++ b/ipu/templates/account/activation_success.html
@@ -2,5 +2,5 @@
 {% block title %} Acitvation Complete {% endblock %}
 {% block content %} 
     <h4> Account Successfully Verified</h4>
-    <p> You can now proceed to <a href="{% url 'login' %}">login</a> </p>. 
+    <p> You can now proceed to <a href="{% url 'auth' %}">login</a> </p>. 
 {% endblock %}
