--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -39,6 +39,7 @@
 
 {% block menu_icon_dropdown %}
 	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Add Faculty</a></li>
+	<li><a href="{% url 'manage_dummy' %}" >Manage Dummy Company</a></li>
     <li class="divider"></li>
 {% endblock %}
 
