--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -200,7 +200,7 @@
 	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/update.js' %}"></script>
-	<script type="text/javascript" src="{% static 'notification/student.js' %}"></script
+	<script type="text/javascript" src="{% static 'notification/student.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/apply.js' %}"></script>
 	<script>
 		$(document).ready(function() {
