--- a/ipu/templates/student/companies_in_my_college.html
+++ b/ipu/templates/student/companies_in_my_college.html
@@ -3,93 +3,101 @@
 	<h4 class="center" style="color: #337ab7; font-weight: 600">{{ htmlid|title }}</h4>
 	<div id="enrolled-{{htmlid}}" class="enrolled nested-scrollspy">
 		{% for e in on %}
-			{% with e.assoc as enrolled %}
-				<div class="card sticky-action">
-					<div class="card-image waves-effect waves-block waves-light">
-						{% if enrolled.company.photo %}
-							<img class="activator" height=250 width=250 src="{{ enrolled.company.photo.url }}" />
-						{% else %}
-							<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'seagreen' 'goldenrod' 'cornflowerblue' %}" />
-						{% endif %}
+			{% if e.is_dummy %}
+				{% include 'dummy_company/dcompanies_in_my_college.html' with e=e %}
+			{% else %}
+				{% with e.assoc as enrolled %}
+					<div class="card sticky-action">
+						<div class="card-image waves-effect waves-block waves-light">
+							{% if enrolled.company.photo %}
+								<img class="activator" height=250 width=250 src="{{ enrolled.company.photo.url }}" />
+							{% else %}
+								<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'seagreen' 'goldenrod' 'cornflowerblue' %}" />
+							{% endif %}
+						</div>
+						<div class="card-content">
+							<span class="card-title activator grey-text text-darken-4">
+								<b>{{ enrolled.company.name|title }}</b>
+								<i class="material-icons right">more_vert</i>
+							</span>
+							<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ enrolled.salary }} LPA</b></h6>
+							<p><b>{{ e.date|timeuntil }}</b> left to withdraw application</p>
+						</div>
+						<div class="card-action">
+							<a class="change-enrollment" href="{% url 'apply' e.sessid %}">Withdraw Application</a>
+						</div>
+						<div class="card-reveal">
+							<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
+							<p>Programme: {{ enrolled.programme.name }}</p>
+							<p>
+								Streams: 
+								{% for stream in enrolled.streams.all %}
+									{{ stream.name }}, 
+								{% endfor %}
+							</p>
+							<p>{{ enrolled.desc }}</p>
+							<p> Company Details: {{ enrolled.company.details }} </p>
+							<p> Website: <a target="_blank" href="{{ enrolled.company.website }}">{{ enrolled.company.website }}</a></p>
+							{% with enrolled.company.profile.social as social %}
+								<ul>
+									<li></li>
+								</ul>
+							{% endwith %}
+							{% include 'recruitment/criteria.html' with criterion=enrolled.session.selection_criteria %}
+						</div>
 					</div>
-					<div class="card-content">
-						<span class="card-title activator grey-text text-darken-4">
-							<b>{{ enrolled.company.name|title }}</b>
-							<i class="material-icons right">more_vert</i>
-						</span>
-						<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ enrolled.salary }} LPA</b></h6>
-						<p><b>{{ e.date|timeuntil }}</b> left to withdraw application</p>
-					</div>
-					<div class="card-action">
-						<a class="change-enrollment" href="{% url 'apply' e.sessid %}">Withdraw Application</a>
-					</div>
-					<div class="card-reveal">
-						<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
-						<p>Programme: {{ enrolled.programme.name }}</p>
-						<p>
-							Streams: 
-							{% for stream in enrolled.streams.all %}
-								{{ stream.name }}, 
-							{% endfor %}
-						</p>
-						<p>{{ enrolled.desc }}</p>
-						<p> Company Details: {{ enrolled.company.details }} </p>
-						<p> Website: <a target="_blank" href="{{ enrolled.company.website }}">{{ enrolled.company.website }}</a></p>
-						{% with enrolled.company.profile.social as social %}
-							<ul>
-								<li></li>
-							</ul>
-						{% endwith %}
-						{% include 'recruitment/criteria.html' with criterion=enrolled.session.selection_criteria %}
-					</div>
-				</div>
-			{% endwith %}
+				{% endwith %}
+			{% endif %}
 		{% endfor %}
 	</div>
 	<div id="unenrolled-{{htmlid}}" class="unenrolled nested-scrollspy">
 		{% for u in off %}
-			{% with u.assoc as unenrolled %}
-				<div class="card sticky-action">
-					<div class="card-image waves-effect waves-block waves-light">
-						{% if unenrolled.company.photo %}
-							<img class="activator" height=250 width=250 src="{{ unenrolled.company.photo.url }}" />
-						{% else %}
-							<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'cornflowerblue' 'goldenrod' 'lightcoral' 'seagreen' %}" />
-						{% endif %}
+			{% if u.is_dummy %}
+				{% include 'dummy_company/dcompanies_in_my_college.html' with u=u %}
+			{% else %}
+				{% with u.assoc as unenrolled %}
+					<div class="card sticky-action">
+						<div class="card-image waves-effect waves-block waves-light">
+							{% if unenrolled.company.photo %}
+								<img class="activator" height=250 width=250 src="{{ unenrolled.company.photo.url }}" />
+							{% else %}
+								<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'cornflowerblue' 'goldenrod' 'lightcoral' 'seagreen' %}" />
+							{% endif %}
+						</div>
+						<div class="card-content">
+							<span class="card-title activator grey-text text-darken-4">
+								<b>{{ unenrolled.company.name|title }}</b>
+								<i class="material-icons right">more_vert</i>
+							</span>
+							<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ unenrolled.salary }} LPA</b></h6>
+							<p><b>{{ u.date|timeuntil }}</b> left to apply</p>
+						</div>
+						<div class="card-action">
+							<a class="change-enrollment" href="{% url 'apply' u.sessid %}">Apply</a>
+						</div>
+						<div class="card-reveal">
+							<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
+							<p>Programme: {{ unenrolled.programme.name }}</p>
+							<p>
+								Streams: 
+								{% for stream in unenrolled.streams.all %}
+									{{ stream.name }}
+								{% endfor %}
+							</p>
+							<p>{{ unenrolled.desc }}</p>
+							<p> Company Details: {{ unenrolled.company.details }} </p>
+							<p> Website: <a target="_blank" href="{{ enrolled.company.website }}">{{ enrolled.company.website }}</a></p>
+							{% with unenrolled.company.profile.social as social %}
+								<ul>
+									<li></li>
+								</ul>
+							{% endwith %}
+							{% include 'recruitment/criteria.html' with criterion=unenrolled.session.selection_criteria %}
+						</div>
 					</div>
-					<div class="card-content">
-						<span class="card-title activator grey-text text-darken-4">
-							<b>{{ unenrolled.company.name|title }}</b>
-							<i class="material-icons right">more_vert</i>
-						</span>
-						<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ unenrolled.salary }} LPA</b></h6>
-						<p><b>{{ u.date|timeuntil }}</b> left to apply</p>
-					</div>
-					<div class="card-action">
-						<a class="change-enrollment" href="{% url 'apply' u.sessid %}">Apply</a>
-					</div>
-					<div class="card-reveal">
-						<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
-						<p>Programme: {{ unenrolled.programme.name }}</p>
-						<p>
-							Streams: 
-							{% for stream in unenrolled.streams.all %}
-								{{ stream.name }}
-							{% endfor %}
-						</p>
-						<p>{{ unenrolled.desc }}</p>
-						<p> Company Details: {{ unenrolled.company.details }} </p>
-						<p> Website: <a target="_blank" href="{{ enrolled.company.website }}">{{ enrolled.company.website }}</a></p>
-						{% with unenrolled.company.profile.social as social %}
-							<ul>
-								<li></li>
-							</ul>
-						{% endwith %}
-						{% include 'recruitment/criteria.html' with criterion=unenrolled.session.selection_criteria %}
-					</div>
-				</div>
-			{% endwith %}
+				{% endwith %}
+			{% endif %}
 		{% endfor %}
 	</div>
 </div>
-<script type="text/javascript" src="{% static 'material/js/materialize.js' %}"></script>
+<!--<script type="text/javascript" src="{% static 'material/js/materialize.js' %}"></script>-->
