--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -55,7 +55,7 @@
   </div>
   <div class="section" id="third-section">
     <div class="row container" id="third-box">
-      <h3>Meet the team</h3>
+      <h3>Development & Maintenance team</h3>
       <div id="third-box-images">
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/bob.jpg' %}">
