--- a/ipu/templates/account/navbar.html
+++ b/ipu/templates/account/navbar.html
@@ -82,15 +82,7 @@
             {% endblock %}
         </ul>
 <!--Search box for tab and mobile view-->
-        <div id="light" class="white_content"> 
-         <div id="box-search">
-            <form id="search">
-                            <input type="text" name="q" placeholder="Search for Students, Colleges, and Companies..." />
-            </form>
-         </div>   
-            <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none'; document.getElementById('fade').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
-        </div>
-        <div id="fade" class="black_overlay"></div>
+       
 
 <!--materialize fixed main navbar-->
         <div class="navbar-fixed">
@@ -110,8 +102,9 @@
                   	</li>
 
                     <li>
-                      <a class="waves-effect waves-light btn">Home</a>
-                  </li>
+                    <a><i class="fa fa-home" aria-hidden="true"></i></a>
+
+                    </li>
 
 
 
