Complete Dummy Company Flow
- Update form layouts
- Improve flows

--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -24,7 +24,6 @@
 {% endblock header %}
 
 {% block content %}
-
      <div class="parallax-container">
     <div class="parallax"></div>
   </div>
@@ -81,7 +80,7 @@
 
 {% block scripts %}
 	<script>
-		$(document).ready(function() {
+/*		$(document).ready(function() {
 			$('.slider').slider({full_width: true});
 
 		});
@@ -96,7 +95,7 @@
       complete: function() { $('.slider').slider('start'); } // Callback for Modal close
     }
   );
-
+*/
     $(document).ready(function(){
       $('.parallax').parallax();
     });
