--- a/ipu/templates/recruitment/edit_criteria.html
+++ b/ipu/templates/recruitment/edit_criteria.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load material_form %}
 {% block title %}Edit Criteria{% endblock %}
+{% block pagetitle %}Edit Selection Criteria{% endblock %}
 {% block content %}
 <!--<script type="text/javascript" src="{% static 'material/js/materialize.js' %}"></script> -->
 	<h4 class="center" style="color: goldenrod;">Edit Criteria</h4>
