--- a/ipu/templates/college/mysessions.html
+++ b/ipu/templates/college/mysessions.html
@@ -3,51 +3,70 @@
 <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 <script src="{% static 'material/js/materialize.js' %}"></script>
 -->
-{% if sessions %}
-<ul class="collection">
-	{% for session in sessions %}
-		{% if session.is_dummy %}
-			<li class="collection-item avatar" data-sess="{{ session.dsessid }}">
-				<span class="title">{{ session.dcompany }} for {{ session.type|title }} </span>
-				<p>
-					{{ session.salary }}
-					<br>
+<div id="all-sessions" class="col s12 m9 l10">
+	<div id="sessions" class="scrollspy">
+		<ul class="collection">
+			{% for session in sessions %}
+				<li class="collection-item avatar" data-sess="{{ session.sessid }}">
+					{% if session.photo %}
+						<img src="{{ session.photo.url }}" alt="Recruiter" class="circle" />
+					{% endif %}
+					<span class="title">{{ session.company }} for {{ session.type|title }} </span>
 					<p>
-						{{ session.streams }}
+						{{ session.salary }}
+						<br>
+						<p>
+							{{ session.streams }}
+						</p>
+						<br>
+							{{ session.students }} student{{ session.students|pluralize }} in the session
 					</p>
-					<br>
-						{{ session.students }} student{{ session.students|pluralize }} in the session
-				</p>
-				<span class="secondary-content">
-					<a href="{% url 'edit_dsession' session.dsessid %}"><i class="fa fa-2x fa-pencil"></i></a>
-					<a href="{% url 'edit_criteria' session.dsessid %}"><i class="fa fa-2x fa-list-ol"></i></a>
-					<a href="{% url 'dexcel' session.dsessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
-				</span>
-			</li>
-		{% else %}
-			<li class="collection-item avatar" data-sess="{{ session.sessid }}">
-				{% if session.photo %}
-					<img src="{{ session.photo.url }}" alt="Recruiter" class="circle" />
-				{% endif %}
-				<span class="title">{{ session.company }} for {{ session.type|title }} </span>
-				<p>
-					{{ session.salary }}
-					<br>
+					<span class="secondary-content">
+						<a href="{% url 'edit_session' session.sessid %}"><i class="fa fa-2x fa-pencil"></i></a>
+						<a href="{% url 'edit_criteria' session.sessid %}"><i class="fa fa-2x fa-list-ol"></i></a>
+						<a href="{% url 'excel' session.sessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
+					</span>
+				</li>
+			{% empty %}
+				<b><h1 class="center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</h1></b>
+			{% endfor %}
+		</ul>
+	</div>
+	<hr><hr><hr>
+	<div id="dsessions" class="scrollspy">
+		<ul class="collection">
+			{% for dsession in dsessions %}
+				<li class="collection-item avatar" data-sess="{{ dsession.dsessid }}">
+					<span class="title">{{ dsession.dcompany }} for {{ dsession.type|title }} </span>
 					<p>
-						{{ session.streams }}
+						{{ dsession.salary }}
+						<br>
+						<p>
+							{{ dsession.streams }}
+						</p>
+						<br>
+							{{ dsession.students }} student{{ dsession.students|pluralize }} in the session
 					</p>
-					<br>
-						{{ session.students }} student{{ session.students|pluralize }} in the session
-				</p>
-				<span class="secondary-content">
-					<a href="{% url 'edit_session' session.sessid %}"><i class="fa fa-2x fa-pencil"></i></a>
-					<a href="{% url 'edit_criteria' session.sessid %}"><i class="fa fa-2x fa-list-ol"></i></a>
-					<a href="{% url 'excel' session.sessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
-				</span>
-			</li>
-		{% endif %}
-	{% endfor %}
-</ul>
-{% else %}
-	<b><h1 class="center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</h1></b>
-{% endif %}
+					<span class="secondary-content">
+	<!--					<a href="{% url 'edit_dsession' dsession.dsessid %}"><i class="fa fa-2x fa-pencil"></i></a>-->
+	<!--					<a href="{% url 'edit_criteria' dsession.dsessid %}"><i class="fa fa-2x fa-list-ol"></i></a>-->
+						<a href="{% url 'dexcel' dsession.dsessid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
+					</span>
+				</li>
+			{% empty %}
+				<b><h1 class="center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</h1></b>
+			{% endfor %}
+		</ul>
+	</div>
+</div>
+<script>
+	$(document).ready(function(){
+		var pushpin = '<div class="col hide-on-small-only m3 l2"><div class="toc-wrapper"><ul class="table-of-contents"><li><a href="#sessions">Sessions</a></li><li><a href="#dsessions">Dummy Sessions</a></li></ul></div></div>';
+		var parsedPushpin = $.parseHTML(pushpin);
+		var div = $('#sessions');
+		div.append(parsedPushpin);
+		var top = div.offset().top;
+		$('.toc-wrapper').pushpin({top: top, offset:top});
+		$('.scrollspy').scrollSpy();
+	});
+</script>
