--- a/ipu/templates/dummy_company/manage_dummy_home.html
+++ b/ipu/templates/dummy_company/manage_dummy_home.html
@@ -1,24 +1,83 @@
-{% extends 'account/navbar.html' %}
+{% extends 'account/navbar_with_tabs.html' %}
 {% load staticfiles %}
 {% load material_form %}
 {% block title %}Manage Dummy Company{% endblock %}
-{% block content %}
-	<h4 class="center" style="color: goldenrod;">Edit Dummy Company</h4>
-	<div class="col s12" id="create-dummy-session-div">
-		<form action="{% url 'create_dsessI' %}" method='POST' class="col s8 offset-s2" id="create-dummy-session-form">
+{% block home_url1 %}{% url 'college_home' %}{% endblock %}
+{% block home_url2 %}{% url 'college_home' %}{% endblock %}
+{% block home_url3 %}{% url 'college_home' %}{% endblock %}
+{% block home_url4 %}{% url 'college_home' %}{% endblock %}
+{% block pagetitle %}Manage Dummy Company{% endblock %}
+{% block tabs %}
+	<li class="tab col s2"><a class="active" href="#createdc">Create Dummy Company</a></li>
+	<li class="tab col s2"><a class="" href="#createds">Create Dummy Session</a></li>
+	<li class="tab col s2"><a class="" href="#edit">Edit Criteria</a></li>
+	<li id="dsessions" class="tab col s2"><a class="" href="#dsess">Dummy Sessions</a></li>
+{% endblock tabs %}
+{% block tabs_content %}
+<!--                    -->
+<div id="createdc" class="col s12">
+	<div class="vertical-tabs">
+		<div class="row">
+			<div class="col s3">
+				<ul class="tabs">
+					<li class="tab col s12"><a class="active" href="#v-createdc">Create Dummy Company</a></li>
+					<li class="tab col s12"><a href="#v-editdc">Edit Dummy Company</a></li>
+				</ul>
+			</div>
+			<div class="col s8 offset-s1">
+				<div class="col s12" id="v-createdc">
+					<h4 class="center" style="color: goldenrod;">Create Dummy Company</h4>
+					<form action="{% url 'create_dcompany' %}" method='POST' class="col s8 offset-s2" id="create-dummy-company-form">
+						{% csrf_token %}
+						{% form form=create_dummy_company_form %}{% endform %}
+						<div class="row">
+							<button class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Create Dummy Company</button>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="col s8 offset-s1" id="edit-forms-div">
+				<div class="col s12" id="v-editdc">
+					<h4 class="center" style="color: goldenrod;">Edit Dummy Company</h4>
+					<form action="{% url 'edit_dcompany_form' %}" method='POST' class="col s8 offset-s2" id="choose-dummy-company-form">
+						{% csrf_token %}
+						{% form form=choose_dummy_company_form %}{% endform %}
+						<div class="row">
+							<button class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Choose This Company</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--                                     -->
+<div id="createds" class="col s12 m10 offset-m1">
+	<div class="col s12">
+		<h4 class="center" style="color: goldenrod; margin-bottom:7%;">Create Dummy Session</h4>
+		<form action="{% url 'create_dsession' %}" method='POST' class="col s12" id="create-dummy-session-form">
 			{% csrf_token %}
 			{% form form=create_dummy_session_form %}{% endform %}
+			{% form form=create_selection_criteria_form %}{% endform %}
 			<div class="row">
-				<button class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Create Dummy Company</button>
+				<button class="btn btn-waves-light col s8 offset-s2">Create Dummy Session</button>
 			</div>
 		</form>
 	</div>
-{% endblock %}
+</div>
+<!--                                     -->
+	<div id="edit" class="col s12"></div>
+<!--                                     -->
+	<div id="dsess" class="col s12"></div>
+<!--                                     -->
+{% endblock tabs_content %}
 {% block scripts %}
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
+	<script type="text/javascript" src="{% static 'dummy_company/create_session.js' %}"></script>
 	<script>
 		$(document).ready(function() {
-			Settings.init(['create-dummy-session-form']);
+			Settings.init(['create-dummy-company-form']);
+			DSession.init();
 		});
 	</script>
 {% endblock %}
