--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -13,11 +13,27 @@
 	{% endif %}
 {% endblock %}
 
+{% block user_photo_s %}
+	{% if college.photo %}
+		{{ college.photo.url }}
+	{% else %}
+			{% static 'images/college.png' %}	
+	{% endif %}
+{% endblock %}
+
 {% block user_name_card %}
-	{{ college.name }}
+	{{ college.get_short_name }}
 {% endblock %}
 
 {% block user_email_id %}
+	{{ college.profile.email }}
+{% endblock %}
+
+{% block user_name_card_s %}
+	{{ college.get_short_name }}
+{% endblock %}
+
+{% block user_email_id_s %}
 	{{ college.profile.email }}
 {% endblock %}
 
@@ -39,8 +55,8 @@
 
 {% block menu_icon_dropdown %}
 	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Add Faculty</a></li>
+	<li class="divider"></li>
 	<li><a href="{% url 'manage_dummy' %}" >Manage Dummy Company</a></li>
-    <li class="divider"></li>
 {% endblock %}
 
 {% block user_type %}
@@ -54,7 +70,39 @@
 {% block user_photo2 %}
 	{% if college.photo %}
 		{{ college.photo.url }}
+	{% else %}
+			{% static 'images/college.png' %}
 	{% endif %}
+{% endblock %}
+
+{% block side_nav_links %}
+    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
+          Associate With Companies</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+          Association Requests</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
+    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+            Sessions</a></li>
+    
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
+            Settings</a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
+                    Account Settings</a></li>
+                    <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
+                   Profile Settings</a></li>
+                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
+                      Social Profile Settings</a></li>
+                
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
 {% endblock %}
 
 {% block tabs%}
