--- a/ipu/dstatic/student/home.css
+++ b/ipu/dstatic/student/home.css
@@ -92,3 +92,7 @@
 .toc-wrapper .table-of-contents a.active {
 	border-left: 2px solid lightcoral;
 }
+
+.row .col.s2 {
+    width: 20% !important; 
+}
