--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -24,15 +24,24 @@
 {% endblock header %}
 
 {% block content %}
+<div id="top-bar">
+<ul id="top-links">
+             <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
+             <li><a href="{% url 'procedures' %}">Procedures</a></li>
+             <li><a href="{% url 'stats' %}">Placement Stats</a></li>
+</ul>
+</div>
+                  
+ <img id="icon-college" src="{% static 'account/images/ipu-logo.png' %}">
      <div class="parallax-container">
-    <div class="parallax"></div>
-  </div>
-  <div class="section" id="first-section">
-    <div class="row container" id="first-box">
-      <img class="responsive-img" src="{% static 'account/images/ipu-logo.png' %}">
-      <h3>Guru Gobind Singh Indraprastha University</h3>
+    <div class="parallax" id="img-first">
+    	<div class="row container" id="first-bo">
+    	    
+      		<h3>Guru Gobind Singh Indraprastha University</h3>
+    	</div>
     </div>
   </div>
+
   <div class="parallax-container" id="second-parallax-container">
     <div class="parallax" id="img-mid"></div>
   </div>
@@ -59,15 +68,30 @@
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/bob.jpg' %}">
               <h5>Pratulya Bubna</h5>
+              <div id="icons">
+              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
+              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
+              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
+             </div>
             </div>
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/rajjo.jpg' %}">
               <h5>Rajneesh Sharma</h5>
+               <div id="icons">
+              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
+              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
+              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
+             </div>
             </div>
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/shivam.jpg' %}">
               <h5>Shivam Sharma</h5>
-        </div>
+               <div id="icons">
+              	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
+              	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
+              	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
+             </div>
+           </div>
       </div>
     </div>
   </div>
