--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -1,17 +1,27 @@
 {% extends 'account/base_home_layout.html' %}
 {% load staticfiles %}
 {% load material_form %}
+
 {% block user_photo %}
 	{% if company.photo %}
 		{{ company.photo.url }}
 	{% endif %}
 {% endblock %}
 
-{% block user_name_card %}
+{% block user_photo_s %}
+	{% if company.photo %}
+		{{ company.photo.url }}
+	{% else %}
+			{% static 'images/company2.png' %}	
+
+	{% endif %}
+{% endblock %}
+
+{% block user_name_card_s %}
 	{{ company.name }}
 {% endblock %}
 
-{% block user_email_id %}
+{% block user_email_id_s %}
 	{{ company.profile.email }}
 {% endblock %}
 
@@ -35,14 +45,16 @@
 {% block user_photo2 %}
 	{% if company.photo %}
 		{{ company.photo.url }}
+	{% else %}
+			{% static 'images/company2.png' %}	
 	{% endif %}
 {% endblock %}
 
 {% block tabs%}
-	<li class="tab col s2"><a class="active" href="#associate">Associate with colleges</a></li>
-	<li id = "request" class="tab col s2" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
-	<li class="tab col s2"><a href="#settings">Settings</a></li>
-	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
+	<li class="tab col s3"><a class="active" href="#associate">Associate with colleges</a></li>
+	<li id = "request" class="tab col s3" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
+	<li class="tab col s3"><a href="#settings">Settings</a></li>
+	<li id="session" class="tab col s3"><a href="#sessions">Sessions</a></li>
 {% endblock %}
 
 {% block tabs_content %}
