Multiple Jquery handled in notification.

--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -130,6 +130,7 @@
 				<div class=" col s8 offset-s1">
 					<div id="your-notifications-div" class="col s12">
 							  <ul id = "your-notifications-div-ul" class="collection">
+							  OOPS!! Please Reload.
 							  </ul>
 					</div>
 					<div id="notify-students-div" class="col s12">
